--- a/docs-web/src/main/webapp/src/locale/en.json
+++ b/docs-web/src/main/webapp/src/locale/en.json
@@ -67,6 +67,9 @@
     "current_step_name": "Current step",
     "title": "Title",
     "description": "Description",
+    "gpa": "GPA (0-4.0)",
+    "gender": "Gender",
+    "age": "Age",
     "contributors": "Contributors",
     "language": "Language",
     "creation_date": "Creation date",
