rearranged inputs, added program drop down menu

--- a/docs-web/src/main/webapp/src/locale/en.json
+++ b/docs-web/src/main/webapp/src/locale/en.json
@@ -70,6 +70,7 @@
     "gpa": "GPA (0-4.0)",
     "gender": "Gender",
     "age": "Age",
+    "program": "Program",
     "contributors": "Contributors",
     "language": "Language",
     "creation_date": "Creation date",
