Document Fields added to Frontend Layer to Accept GPA, Age, Gender, Program (#10)
* added input textbox for GPA

* added input textbox for gender

* added input textbox for age

* changed gender to be a dropdown menu

* rearranged inputs, added program drop down menu

* updated README

* style fix for README

* added input for skills and experiences

--- a/docs-web/src/main/webapp/src/locale/en.json
+++ b/docs-web/src/main/webapp/src/locale/en.json
@@ -67,6 +67,12 @@
     "current_step_name": "Current step",
     "title": "Title",
     "description": "Description",
+    "gpa": "GPA (0-4.0)",
+    "gender": "Gender",
+    "age": "Age",
+    "program": "Program",
+    "experience": "Experience (1-10)",
+    "skills": "Skills (1-10)",
     "contributors": "Contributors",
     "language": "Language",
     "creation_date": "Creation date",
