--- a/docs-web/src/main/webapp/src/locale/en.json
+++ b/docs-web/src/main/webapp/src/locale/en.json
@@ -76,6 +76,9 @@
     "contributors": "Contributors",
     "language": "Language",
     "creation_date": "Creation date",
+    "avg_skills": "Avg Skills",
+    "avg_experience": "Avg Experience",
+    "avg_gpa": "Avg GPA",
     "subject": "Subject",
     "identifier": "Identifier",
     "publisher": "Publisher",
