html is not changing

--- a/docs-web/src/main/webapp/src/locale/en.json
+++ b/docs-web/src/main/webapp/src/locale/en.json
@@ -70,6 +70,9 @@
     "contributors": "Contributors",
     "language": "Language",
     "creation_date": "Creation date",
+    "avg_gpa": "Average GPA", 
+    "avg_skills": "Average Skill Score",
+    "avg_experience": "Average Experience Score",
     "subject": "Subject",
     "identifier": "Identifier",
     "publisher": "Publisher",
