created Dashboard table. Waiting for calculation variables from Rahul to populate dashboard

--- a/docs-web/src/main/webapp/src/locale/en.json
+++ b/docs-web/src/main/webapp/src/locale/en.json
@@ -61,6 +61,7 @@
     "tags": "Tags",
     "no_tags": "No tags",
     "no_documents": "No document in the database",
+    "no_statistics": "No statistics available, please upload documents",
     "search": "Search",
     "search_empty": "No matches for <strong>\"{{ search }}\"</strong>",
     "shared": "Shared",
@@ -70,9 +71,9 @@
     "contributors": "Contributors",
     "language": "Language",
     "creation_date": "Creation date",
-    "avg_gpa": "Average GPA", 
-    "avg_skills": "Average Skill Score",
-    "avg_experience": "Average Experience Score",
+    "avg_gpa": "Avg GPA", 
+    "avg_skills": "Avg Skills",
+    "avg_experience": "Avg Experience",
     "subject": "Subject",
     "identifier": "Identifier",
     "publisher": "Publisher",
