The front-end table is complete on the front-end, which is my assigned issue. I used dummy_values to currently populate the table. Waiting on Charly and Rahul's calculation variables for integration

--- a/docs-web/src/main/webapp/src/locale/en.json
+++ b/docs-web/src/main/webapp/src/locale/en.json
@@ -74,6 +74,11 @@
     "avg_gpa": "Avg GPA", 
     "avg_skills": "Avg Skills",
     "avg_experience": "Avg Experience",
+    
+    "dummy_gpa": "4.0",
+    "dummy_experience": "5",
+    "dummy_skills": "7",
+    
     "subject": "Subject",
     "identifier": "Identifier",
     "publisher": "Publisher",
