Dashboard Table created in the Front End in Document.html (#11)
* html is not changing

* update db changed to get rid of null values

* created Dashboard table. Waiting for calculation variables from Rahul to populate dashboard

* added files of console prints

* changes to the README.md for documentation on what is done in this task

* The front-end table is complete on the front-end, which is my assigned issue. I used dummy_values to currently populate the table. Waiting on Charly and Rahul's calculation variables for integration

--- a/docs-web/src/main/webapp/src/locale/en.json
+++ b/docs-web/src/main/webapp/src/locale/en.json
@@ -61,6 +61,7 @@
     "tags": "Tags",
     "no_tags": "No tags",
     "no_documents": "No document in the database",
+    "no_statistics": "No statistics available, please upload documents",
     "search": "Search",
     "search_empty": "No matches for <strong>\"{{ search }}\"</strong>",
     "shared": "Shared",
@@ -76,9 +77,15 @@
     "contributors": "Contributors",
     "language": "Language",
     "creation_date": "Creation date",
+
+    "avg_gpa": "Avg GPA", 
     "avg_skills": "Avg Skills",
     "avg_experience": "Avg Experience",
-    "avg_gpa": "Avg GPA",
+    
+    "dummy_gpa": "4.0",
+    "dummy_experience": "5",
+    "dummy_skills": "7",
+    
     "subject": "Subject",
     "identifier": "Identifier",
     "publisher": "Publisher",
